--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "symfony/dependency-injection": "^2.7|^3.0",
     "mmoreram/simple-doctrine-mapping": "^1.0",
 
-    "beloop/core": "dev-master"
+    "beloop/core": "^0.2"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.19"
