--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
   "require": {
     "php": "^5.5|^7.0",
     "doctrine/common": "^2.5",
+    "doctrine/doctrine-bundle": "^1.5.0",
     "doctrine/orm": "^2.5",
 
     "symfony/config": "^2.7|^3.0",
     "symfony/console": "^2.7|^3.0",
     "symfony/dependency-injection": "^2.7|^3.0",
     "symfony/http-kernel": "^2.7|^3.0",
+    "symfony/yaml": "^2.7|^3.0",
     "mmoreram/simple-doctrine-mapping": "^1.0",
 
     "beloop/core": "^0.3"
