--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,19 @@
     }
   ],
   "require": {
-    "php": "^5.5|^7.0",
+    "php": "^7.2",
     "doctrine/common": "^2.5",
     "doctrine/doctrine-bundle": "^1.5.0",
     "doctrine/orm": "^2.5",
 
-    "symfony/config": "^2.7|^3.0",
-    "symfony/console": "^2.7|^3.0",
-    "symfony/dependency-injection": "^2.7|^3.0",
-    "symfony/http-kernel": "^2.7|^3.0",
-    "symfony/yaml": "^2.7|^3.0",
+    "symfony/config": "^3.0",
+    "symfony/console": "^3.0",
+    "symfony/dependency-injection": "^3.0",
+    "symfony/http-kernel": "^3.0",
+    "symfony/yaml": "^3.0",
     "mmoreram/simple-doctrine-mapping": "^1.0",
 
-    "beloop/core": "^0.5"
+    "beloop/core": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "8.3.5"
@@ -43,7 +43,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.5-dev"
+      "dev-master": "1.0-dev"
     }
   }
 }
